--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project( CalcAndDraw )
 set(OpenCV_DIR /opencv/build)
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
-add_executable( CalcAndDraw project_with_images.cpp)
+add_executable( CalcAndDraw main.cpp)
 target_link_libraries( CalcAndDraw ${OpenCV_LIBS} )
