--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,12 +6,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Install prereqs
+      - name: Install prereqs and build
         run: |
           sudo apt update
-          chmod +x prereqs.sh
-          ./prereqs.sh
-      - name: Build
-        run: |
+          chmod +x prereqs.sh 
           chmod +x ./build.sh
-          ./build.sh
+          ./prereqs.sh &&  ./build.sh
